--- a/index.html
+++ b/index.html
@@ -1,81 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>sporbit</title>
-	<link rel="shortcut icon" href="icons/ball.png" type="image/x-icon">
-	<link rel="icon" href="icons/ball.png" type="image/x-icon">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/main.min.css">
-</head>
-<body>
-	<header class="promo">
-		<div class="container">
-			<div class="logo">
-				<img class="logo__img" src="icons/logo.svg" alt="logo">
-				<p class="logo__text">sportbit</p>
-			</div>
-			<div class="promo__block">
-				<div class="promo__img-block">
-					<img src="img/smartwatch.png" alt="" class="promo__img">
-				</div>
-				<div class="promo__text-block">
-					<h1 class="promo__title">Smart watch for smart people</h1>
-					<p class="promo__text">Perfect for your health, life and sports activities</p>
-					<a href="#" class="button button_promo">Buy now</a>
-				</div>
-			</div>
-		</div>
-	</header>
-	<section class="possibilities">
-		<div class="container">
-			<h2 class="title">What does sportbit can</h2>
-			<div class="possibilities__items">
-				<div class="possibilities__item">
-					<div class="possibilities__number">1</div>
-					<div class="possibilities__text-block">
-						<h3 class="possibilities__subtitle">Track your sports</h3>
-						<p class="possibilities__text">Sportbit can track all of your sports activities through the day</p>
-					</div>
-				</div>
-				<div class="possibilities__item">
-					<div class="possibilities__number">2</div>
-					<div class="possibilities__text-block">
-						<h3 class="possibilities__subtitle">Keep up your health</h3>
-						<p class="possibilities__text">With sportbit you never miss important updates on your health</p>
-					</div>
-				</div>
-				<div class="possibilities__item">
-					<div class="possibilities__number">3</div>
-					<div class="possibilities__text-block">
-						<h3 class="possibilities__subtitle">Achieve new goals</h3>
-						<p class="possibilities__text">Gadgets have never been so inclusive into challenges you face</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="start">
-		<div class="container">
-			<div class="start-inner">
-				<div class="start-inner__block">
-					<img src="img/ball.png" alt="" class="start-inner__img">
-					<div class="start-inner__text-block">
-						<h2 class="start-inner__title">Start the practice whenever you ready</h2>
-						<p class="start-inner__text">Sportbit undestands any movement you make to start just the right practice and count every single calorie!</p>
-						<a href="" class="button button_start">Buy now</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<div class="footer">
-		<div class="container">
-			<div class="footer-inner">2030 Ⓒ All rights reserved</div>
-		</div>
-	</div>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>sporbit</title><link rel="shortcut icon" href="icons/ball.png" type="image/x-icon"><link rel="icon" href="icons/ball.png" type="image/x-icon"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet"><link rel="stylesheet" href="css/normalize.min.css"><link rel="stylesheet" href="css/main.min.css"></head><body><header class="promo"><div class="container"><div class="logo"><img class="logo__img" src="icons/logo.svg" alt="logo"><p class="logo__text">sportbit</p></div><div class="promo__block"><div class="promo__img-block"><img src="img/smartwatch.png" alt="" class="promo__img"></div><div class="promo__text-block"><h1 class="promo__title">Smart watch for smart people</h1><p class="promo__text">Perfect for your health, life and sports activities</p><a href="#" class="button button_promo">Buy now</a></div></div></div></header><section class="possibilities"><div class="container"><h2 class="title">What does sportbit can</h2><div class="possibilities__items"><div class="possibilities__item"><div class="possibilities__number">1</div><div class="possibilities__text-block"><h3 class="possibilities__subtitle">Track your sports</h3><p class="possibilities__text">Sportbit can track all of your sports activities through the day</p></div></div><div class="possibilities__item"><div class="possibilities__number">2</div><div class="possibilities__text-block"><h3 class="possibilities__subtitle">Keep up your health</h3><p class="possibilities__text">With sportbit you never miss important updates on your health</p></div></div><div class="possibilities__item"><div class="possibilities__number">3</div><div class="possibilities__text-block"><h3 class="possibilities__subtitle">Achieve new goals</h3><p class="possibilities__text">Gadgets have never been so inclusive into challenges you face</p></div></div></div></div></section><section class="start"><div class="container"><div class="start-inner"><div class="start-inner__block"><img src="img/ball.png" alt="" class="start-inner__img"><div class="start-inner__text-block"><h2 class="start-inner__title">Start the practice whenever you ready</h2><p class="start-inner__text">Sportbit undestands any movement you make to start just the right practice and count every single calorie!</p><a href="" class="button button_start">Buy now</a></div></div></div></div></section><div class="footer"><div class="container"><div class="footer-inner">2030 Ⓒ All rights reserved</div></div></div></body></html>
